<resources>
    <string name="app_name">QuizIT</string>
    <string name="title">Welcome to Quiz IT</string>
    <string name="loadFile">Load File</string>
    <string name="Title_Image">Title Image</string>
    <string name="title_activity_questions">Questions</string>
    <string name="action_settings">Settings</string>
    <string name="nextQuestTxt">Next Question</string>
    <string name="nextQuesText">Next Question</string>
    <string name="startTxt">Start Quiz</string>
    <string name="nameTxt">Name:</string>
    <string name="nameErrText">Must Enter Name</string>
    <string name="maxScoreTxt">/10</string>
    <string name="title_activity_score_screen">ScoreScreen</string>
    <string name="FinalScoreTxt">Final Score</string>
    <string name="title_activity_new_quiz">NewQuizActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="numQuesTxt">Enter Number of Questions</string>
    <string name="createQuizTxt">Create Quiz</string>
    <string name="title_activity_create_quiz">CreateQuiz</string>
    <string name="ques1_txt">Question 1</string>
    <string name="defEnterTitle">Enter Definition</string>
    <string name="termEnterTitle">Enter Corresponding Term</string>
    <string name="defHint">Definition</string>
    <string name="termHint">Term</string>
    <string name="defWarnMsgTxt">Must Enter Definition</string>
    <string name="termWarnMsgTxt">Must Enter Term</string>
    <string name="tryAgainTxt">Try Again</string>
</resources>
