<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#540CA6EE"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/titlePanel">

        <Button
            android:id="@+id/createQuizBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_input_add"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titlePanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:contentDescription="@string/Title_Image"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/errTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nameErrText"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NameTextView"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:maxWidth="5dp"
                android:minWidth="5dp"
                android:paddingEnd="5dp"
                android:text="@string/nameTxt"
                android:textAlignment="textEnd"
                android:textColor="#020202"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/loadFileBtn"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/startTxt" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>