<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#540CA6EE"
    tools:context=".ScoreScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextViewScr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/new_rocker"
            android:text="@string/FinalScoreTxt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/nameTextViewScr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/new_rocker"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currScoreTextViewScr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="45dp"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/maxTextViewSc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxScoreTxt"
                android:textColor="#000000"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/tryAgainBtn"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/tryAgainTxt" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>